[gd_scene load_steps=16 format=3 uid="uid://c3fb3kkjgsxd0"]

[ext_resource type="Script" path="res://things/resorces/stone.gd" id="1_i4541"]
[ext_resource type="PackedScene" uid="uid://3p7pkcngp1e6" path="res://things/item/resorces_item/stone.tscn" id="2_a0t3i"]
[ext_resource type="Texture2D" uid="uid://8ms5twr88j08" path="res://art/item/Sprite-0002.png" id="3_nyhqa"]
[ext_resource type="Texture2D" uid="uid://bjcilakpnyv02" path="res://art/joystick.png" id="4_8opi6"]
[ext_resource type="Texture2D" uid="uid://c87ljahs1oagr" path="res://art/tilemap-04.png" id="5_j6mli"]
[ext_resource type="Texture2D" uid="uid://crc53tkbwf1ye" path="res://art/Healthbar/HealthBack.png" id="6_vy8x8"]
[ext_resource type="Texture2D" uid="uid://dc6yx4e317edp" path="res://art/Healthbar/Healthover.png" id="7_vn3lq"]
[ext_resource type="Texture2D" uid="uid://b16mvt6thnf05" path="res://art/Healthbar/HealthProcess.png" id="8_qcls3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf733"]
size = Vector2(21, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01ik6"]
size = Vector2(35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ifn"]
atlas = ExtResource("5_j6mli")
region = Rect2(130, 384, 65, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_f4sms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ifn")
}],
"loop": true,
"name": &"stone",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_xgv7i"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0m30b"]
resource_name = "falling"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.565487, 0.623083, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, -18), Vector2(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0b08p"]
_data = {
"fade": SubResource("Animation_xgv7i"),
"falling": SubResource("Animation_0m30b")
}

[node name="stone" type="Area2D"]
script = ExtResource("1_i4541")
stone = ExtResource("2_a0t3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.46875)
texture = ExtResource("3_nyhqa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.75)
shape = SubResource("RectangleShape2D_gf733")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, -1.5)
shape = SubResource("RectangleShape2D_01ik6")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(-34, -5)
scale = Vector2(0.163013, 0.15577)
texture_normal = ExtResource("4_8opi6")

[node name="Label" type="Label" parent="TouchScreenButton"]
offset_left = 18.4034
offset_top = 25.679
offset_right = 97.4034
offset_bottom = 99.679
theme_override_font_sizes/font_size = 24
text = "Collect
Stone!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stone2" type="StaticBody2D" parent="."]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="stone2"]
position = Vector2(1, 3)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_f4sms")
animation = &"stone"

[node name="AnimationPlayer" type="AnimationPlayer" parent="stone2"]
libraries = {
"": SubResource("AnimationLibrary_0b08p")
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -22.0
offset_top = -20.0
offset_right = 881.0
offset_bottom = 115.0
scale = Vector2(0.0538843, 0.031611)
value = 100.0
texture_under = ExtResource("6_vy8x8")
texture_over = ExtResource("7_vn3lq")
texture_progress = ExtResource("8_qcls3")
tint_progress = Color(0.603922, 0.992157, 1, 0.654902)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
